Window Sizing Fixes and Comment Alignment Fix

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,10 +32,19 @@ a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, bo
     box-sizing: border-box;
 }
 
+/* This CSS makes sure it looks good on wide screens, and that everything is centered. */
 html { 
     min-width: 950px;
+    display: flex;
+    justify-content: center;
 }
 
+body { 
+    width: 100%;
+    min-width: 950px;
+    max-width: 1444px;
+    box-shadow: 0px 0px 15px 0px black;
+}
 
 
 
