--- a/app/assets/stylesheets/imagination_show.css
+++ b/app/assets/stylesheets/imagination_show.css
@@ -223,7 +223,8 @@
 }
 
 .comment-container { 
-    width: 91%;
+    width: 100%;
+    margin: 0px 0px 0px 20px;
 }
 
 .comment-main-content { 
@@ -254,9 +255,9 @@
     font-family: 'Baloo Tamma 2', Arial, Helvetica, sans-serif;
 }
 
-.owned-comments-buttons-container { 
+/* .owned-comments-buttons-container { 
 
-}
+} */
 
 .owned-comments-buttons {   
     font-size: 13px;
